# samplepythonproject

./: .gitignore  LICENSE.txt  README.md  hatch.toml  pyproject.toml
.github/workflows/: build.yml  test.yml
src/samplepythonproject/: __about__.py  __main__.py
src/samplepythonproject/cli/: __init__.py
tests/: __init__.py  conftest.py  test_cli.py  test_fib.py
